--- a/demo-attacks/Makefile
+++ b/demo-attacks/Makefile
@@ -3,7 +3,7 @@ CXX = gcc
 all: bradv1 bradv2 pink ploop
 
 bradv1: bradv1_demo.c
-	$(CXX) $< -Os -o bradv1_demo
+	$(CXX) $< -O2 -static -fno-pie -no-pie -fno-reorder-blocks -fno-branch-count-reg -fno-tree-vectorize -lm -o bradv1_demo
 
 bradv2: bradv2_demo.c
 	$(CXX) $< -Os -o bradv2_demo
